--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
     "short_name": "Twittor",
     "name": "Twittor para heroes",
+    "description": "App de prueba de PWA",
     "start_url": "index.html",
     "background_color": "#3498db",
     "theme_color": "#3498db",
